[package]
name = "iprange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.13"
fastping-rs = "0.2"
egui = { version = "0.18.0", default-features = false }
egui_extras = { version = "0.18.0" }
enum-map = { version = "2", features = ["serde"] }
eframe = "0.18.0"
unicode_names2 = { version = "0.5.0", default-features = false }
clap = {version = "3.0.9", features = ["derive"]}
tracing = "0.1.5"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "std", "json"] }
regex = "1.5.5"

[[bin]]
name = "gui"

[[bin]]
name = "cmd"